--- a/templates/greenplum_demo/0/docker-compose.yml
+++ b/templates/greenplum_demo/0/docker-compose.yml
@@ -13,6 +13,7 @@ services:
      volumes:
        - /opt/gpmaster/gpdata:/home/gpadmin/gpdata
        - /opt/gpmaster/conf:/home/gpadmin/conf
+       - /opt/gpmaster/etc:/etc
      privileged: true
      tty: true
   gpnode1:
@@ -30,6 +31,7 @@ services:
        - "20004:43001"
      volumes:
        - /opt/gpnode1/gpdata:/home/gpadmin/gpdata
+       - /opt/gpnode1/etc:/etc
      privileged: true
      tty: true
   gpnode2:
@@ -47,6 +49,8 @@ services:
        - "20008:43001"
      volumes:
        - /opt/gpnode2/gpdata:/home/gpadmin/gpdata
+       - /opt/gpnode2/etc:/etc
+
      privileged: true
      tty: true
 
